first version of simple color picker

--- a/_includes/popups/colorPickerPopup.html
+++ b/_includes/popups/colorPickerPopup.html
@@ -38,13 +38,9 @@
               <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-                      <span class="outer">
-                        <span class="inner">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
                       My First tag
-                    </span>
-                      </span>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -104,7 +100,7 @@
               <div class="itemBoxBody">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
                       My First tag
                     </div>
@@ -117,7 +113,7 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
                       Milestone 20
                     </div>
@@ -130,7 +126,7 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
                       Prior Asap
                     </div>
@@ -143,7 +139,7 @@
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
                       Example tag
                     </div>
