--- a/_includes/popups/colorSelector.html
+++ b/_includes/popups/colorSelector.html
@@ -1,26 +1,26 @@
-<div class="colorSelector colorSelector--popup colorSelector--visible">
+<div class="colorSelector colorSelector--popup">
   <div class="itemBox">
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+              <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: red;">܌</span>
+              <span class="pmx-selector__labelIcon" style="color: red;" data-color="red">܌</span>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: blue;">܌</span>
+              <span class="pmx-selector__labelIcon" style="color: blue;" data-color="blue">܌</span>
             </div>
           </li>
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: yellow;">܌</span>
+              <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
             </div>
           </li>
         </ul>
