update include/exclude funxtionality and class names

--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -294,6 +294,11 @@
           text-overflow: ellipsis;
           color: #000;
 
+          &--excluded {
+            text-decoration: line-through;
+            text-decoration-color: red;
+          }
+
           .pmx-selector {
             top: -2px;
           }
