--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -35,7 +35,9 @@
               <div class="itemBoxBody itemBoxBody--sortable">
                 <ul class="itemBoxTable__bodyRow">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">Arnaud</span></span></div>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                      <span class="outer"><span class="inner">Arnaud</span></span>
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
