added color into new column instead of a span in front of the text

--- a/_includes/popups/colorPickerPopup.html
+++ b/_includes/popups/colorPickerPopup.html
@@ -37,9 +37,13 @@
             <div class="itemBoxTable">
               <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
                 <ul class="itemBoxTable__bodyRow">
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
+                  <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
                       My First tag
                     </div>
                   </li>
@@ -99,9 +103,13 @@
             <div class="itemBoxTable">
               <div class="itemBoxBody">
                 <ul class="itemBoxTable__bodyRow">
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
+                  <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
                       <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
                       My First tag
                     </div>
                   </li>
@@ -112,9 +120,13 @@
                   </li>
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
+                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
+                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      </div>
+                    </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
-                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
                       Milestone 20
                     </div>
                   </li>
@@ -125,9 +137,13 @@
                   </li>
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
+                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
+                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      </div>
+                    </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
-                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
                       Prior Asap
                     </div>
                   </li>
@@ -138,9 +154,13 @@
                   </li>
                 </ul>
                 <ul class="itemBoxTable__bodyRow">
+                    <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
+                      <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                        <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                      </div>
+                    </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text js_colorselector-trigger">
-                      <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
                       Example tag
                     </div>
                   </li>
