changed html structure of colorSelector

--- a/_includes/popups/colorSelector.html
+++ b/_includes/popups/colorSelector.html
@@ -5,6 +5,11 @@
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+              <span class="pmx-selector__labelIcon" style="color: black;" data-color="black">܌</span>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
               <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
             </div>
           </li>
@@ -21,6 +26,16 @@
           <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
               <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+              <span class="pmx-selector__labelIcon" style="color: orange;" data-color="orange">܌</span>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+              <span class="pmx-selector__labelIcon" style="color: hotpink;" data-color="hotpink">܌</span>
             </div>
           </li>
         </ul>
