update colorPicker notification

--- a/_includes/popups/colorSelector.html
+++ b/_includes/popups/colorSelector.html
@@ -1,46 +1,50 @@
-<div class="colorSelector colorSelector--popup">
-  <div class="itemBox">
-    <div class="itemBoxTable">
-      <div class="itemBoxBody">
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: black;" data-color="black">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: red;" data-color="red">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: blue;" data-color="blue">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: orange;" data-color="orange">܌</span>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-              <span class="pmx-selector__labelIcon" style="color: hotpink;" data-color="hotpink">܌</span>
-            </div>
-          </li>
-        </ul>
+<div class="multiSelector multiSelector--popup multiSelector--colorPicker">
+  <div class="multiSelector__box">
+
+    <div class="itemBox">
+      <div class="itemBoxTable">
+        <div class="itemBoxBody">
+          <ul class="itemBoxTable__bodyRow">
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: black;" data-color="black">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: green;" data-color="green">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: red;" data-color="red">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: blue;" data-color="blue">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: yellow;" data-color="yellow">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: orange;" data-color="orange">܌</span>
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
+                <span class="pmx-selector__labelIcon" style="color: hotpink;" data-color="hotpink">܌</span>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+    <!-- /.itemBox -->
+
   </div>
-  <!-- /.itemBox -->
 </div>
