--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -8,7 +8,7 @@
   opacity: 0;
   pointer-events: none;
   z-index: -1;
-  transition: all .3s ease-in-out;
+  transition: opacity .15s ease-in-out;
   font-size: 16px;
 
   &--visible {
