--- a/_includes/blocks/document-steps.html
+++ b/_includes/blocks/document-steps.html
@@ -1,15 +1,15 @@
 <aside class="document__info">
     <div class="tabs">
-    <div class="tabs__nav">
+    <div class="tabs-nav">
       <ul>
-        <span class="tab__active-link-bar" style="left: 9.99057px; width: 77.4764px;"></span>
-        <li><a href="#" class="tab__link active" tabindex="1">Progress</a></li>
-        <li><a href="#" class="tab__link" tabindex="2">Info</a></li>
+        <span class="tabs-nav__linkBar"></span>
+        <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">Progress</a></li>
+        <li><a href="#" class="tabs-nav__link" tabindex="2">Info</a></li>
       </ul>
     </div><!-- /.tabs__nav -->
 
-    <div class="tabs__panels">
-        <div class="tabs__panel" tabindex="1" style="">
+    <div class="tabs-panels">
+        <div class="tabs-panels__panel" tabindex="1">
             <ul class="document__steps">
                 <li class="step step--resloved">
                     <span class="step__symbol"></span>
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </div><!-- /.tabs__panel -->
-        <div class="tabs__panel" tabindex="2" style="display: none;">
+        <div class="tabs-panels__panel" tabindex="2">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div><!-- /.tabs__panel -->
