--- a/sass/app.scss
+++ b/sass/app.scss
@@ -31,6 +31,9 @@ body.page-Popups {
   background-color: #FFF;
   padding: 50px;
 }
+body.page-Popups .multiSelector {
+  margin: 100px 0;
+}
 
 input,
 textarea {
