restructured colorSelector.js
now it works with multiple colorselectors if using the good html structure

--- a/_includes/popups/colorPickerPopup.html
+++ b/_includes/popups/colorPickerPopup.html
@@ -1,5 +1,5 @@
 
-<div class="multiSelector multiSelector--popup multiSelector--visible">
+<div class="multiSelector multiSelector--popup multiSelector--visible"  data-colorpicker="#js_colorPickerPopup1">
 
   <div class="multiSelector__box">
 
