--- a/_includes/popups/colorSelector.html
+++ b/_includes/popups/colorSelector.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup multiSelector--colorPicker">
+<div class="multiSelector multiSelector--popup multiSelector--colorPicker" id="js_colorPickerPopup1">
   <div class="multiSelector__box">
 
     <div class="itemBox">
