removed incl/excl from colorpicker examples

--- a/_includes/popups/colorPicker-popup.html
+++ b/_includes/popups/colorPicker-popup.html
@@ -69,22 +69,9 @@
                 <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
               </div>
             </li>
-            <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
               <div class="itemBoxTable__bodyCellInner">
-
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required js_pmx-selector--incl-excl">
-                  <div class="pmx-selector__value js_pmx-selector__value--include pmx-selector__value--selected">
-                    <div class="pmx-selector__label ">
-                      <span class="" style="">Include</span>
-                    </div>
-                  </div>
-                  <div class="pmx-selector__value js_pmx-selector__value--exclude">
-                    <div class="pmx-selector__label">
-                      <span class="">Exclude</span>
-                    </div>
-                  </div>
-                </div>
-
+                <i>All</i>
               </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove js_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
