--- a/_includes/popups/multiSelector-advanced.html
+++ b/_includes/popups/multiSelector-advanced.html
@@ -320,7 +320,7 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">+</span>
+                            <span class="pmx-selector__labelIcon">ބ</span>
                             <span class="pmx-selector__labelType">Contain</span>
                             <span class="pmx-selector__labelField">Field</span>
                           </div>
@@ -343,7 +343,7 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">+</span>
+                            <span class="pmx-selector__labelIcon">ބ</span>
                             <span class="pmx-selector__labelType">Contain</span>
                             <span class="pmx-selector__labelField">Field</span>
                           </div>
@@ -366,7 +366,7 @@
                       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
                         <div class="pmx-selector__value">
                           <div class="pmx-selector__label ">
-                            <span class="pmx-selector__labelIcon">+</span>
+                            <span class="pmx-selector__labelIcon">ބ</span>
                             <span class="pmx-selector__labelType">Contain</span>
                             <span class="pmx-selector__labelField">Field</span>
                           </div>
