--- a/sass/app.scss
+++ b/sass/app.scss
@@ -31,6 +31,7 @@ body.page-Popups {
   background-color: #FFF;
   padding: 50px;
 }
+body.page-Colorpicker .multiSelector,
 body.page-Popups .multiSelector {
   margin: 100px 0;
 }
