--- a/_includes/blocks/document-data.html
+++ b/_includes/blocks/document-data.html
@@ -12,25 +12,22 @@
     </header>
 
     <div class="tabs">
-    <div class="tabs__nav">
+    <div class="tabs-nav">
       <ul>
-        <span class="tab__active-link-bar" style="left: 9.99054px; width: 67.0472px;"></span>
-        <li><a href="#" class="tab__link active" tabindex="1">General</a></li>
-        <li><a href="#" class="tab__link" tabindex="2">Permit Parameters</a></li>
-        <li><a href="#" class="tab__link" tabindex="3">Special instructions</a></li>
+        <span class="tabs-nav__linkBar"></span>
+        <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">General</a></li>
+        <li><a href="#" class="tabs-nav__link" tabindex="2">Permit Parameters</a></li>
+        <li><a href="#" class="tabs-nav__link" tabindex="3">Special instructions</a></li>
       </ul>
-    </div><!-- /.tabs__nav -->
+    </div><!-- /.tabs-nav -->
 
-    <div class="tabs__panels">
-        <div class="tabs__panel" tabindex="1" style="">
-            <div class="cni">
-
-            </div>
-
+    <div class="tabs-panels">
+        <div class="tabs-panels__panel" tabindex="1">
             <div class="sliders">
                 <div class="slider">
                     <div class="slider__header">
-                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.</span>
+                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.
+                        </span>
                         <span class="label">Additional information</span>
                         <a href="#" class="toggle">Applicable</a>
                     </div>
@@ -39,13 +36,14 @@
                     </div>
                 </div>
             </div>
-        </div><!-- /.tabs__panel -->
+        </div><!-- /.tabs-panels__panel -->
 
-        <div class="tabs__panel" tabindex="2" style="display: none;">
+        <div class="tabs-panels__panel" tabindex="2">
             <div class="sliders">
                 <div class="slider">
                     <div class="slider__header">
-                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.</span>
+                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.
+                        </span>
                         <span class="label">Dangers and dangerous products</span>
                         <a href="#" class="toggle">Applicable</a>
                     </div>
@@ -56,7 +54,8 @@
 
                 <div class="slider">
                     <div class="slider__header">
-                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.</span>
+                        <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.
+                        </span>
                         <span class="label">Possible dangerous tools</span>
                         <a href="#" class="toggle">Applicable</a>
                     </div>
@@ -67,7 +66,7 @@
             </div>
         </div>
 
-        <div class="tabs__panel" tabindex="3" style="display: none;">
+        <div class="tabs-panels__panel" tabindex="3">
             <div class="table">
                 <table>
                   <thead>
@@ -210,7 +209,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- /.tabs__panel -->
-    </div><!-- /.tabs__panels -->
+        </div><!-- /.tabs-panels__panel -->
+    </div><!-- /.tabs-panels__panels -->
   </div><!-- /.tabs -->
 </div><!-- /.document__data -->
