--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -106,6 +106,7 @@
                     </div>
                   </li>
                 </ul>
+                  {% include blocks/colorSelector-children.html %}
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
@@ -123,6 +124,7 @@
                     </div>
                   </li>
                 </ul>
+                  {% include blocks/colorSelector-children.html %}
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
@@ -140,6 +142,7 @@
                     </div>
                   </li>
                 </ul>
+                  {% include blocks/colorSelector-children.html %}
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
@@ -157,7 +160,7 @@
                     </div>
                   </li>
                 </ul>
-
+                  {% include blocks/colorSelector-children.html %}
               </div>
             </div>
           </div>
