making sure, that the expand/collapse toggle doesn't get triggered by the color options

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -58,6 +58,7 @@
                     </div>
                   </li>
                 </ul>
+                {% include blocks/colorSelector-children.html %}
               </div>
             </div>
           </div>
